--- a/app/screens/review-tasks.html
+++ b/app/screens/review-tasks.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../styles/style.css" />
     <link rel="stylesheet" href="../styles/app.css" />
+    <script src="../../scripts/app.js" defer></script>
     <title>Prioritasker | Review task list</title>
 </head>
 <body>
     <!---------------------- Review task list ---------------->
-    <section id="task-list-screen" class="hidden">
+    <section id="task-list-screen">
         <header>
           <div class="container">
             <p class="sort-tasks">Sort tasks</p>
