add cta link file path to the signup form and add link to app from form continue as a guest link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
 
         <!-- Display free demo cta -->
-        <a href="/pages/form.html" class="cta btn">Free Demo</a>
+        <a href="https://sul-devs.github.io/prioritasker/pages/form.html" class="cta btn">Free Demo</a>
       </div>
     </nav>
 
@@ -41,7 +41,7 @@
           <h1 class="hero-heading">Prioritise the tasks of your business.</h1>
           <p class="hero-text">Have a huge workload? Not meeting deadlines? Complete more work by prioritising the tasks with greatest ROI for your business.</p>
           <!-- Add ctas -->
-            <a href="/pages/form.html" class="get-started-btn btn">Try Prioritasker free</a>
+            <a href="https://sul-devs.github.io/prioritasker/pages/form.html" class="get-started-btn btn">Try Prioritasker free</a>
             <a href="#how-it-works" class="btn btn-outline how-it-works-btn">How it works</a>
             <br><br>
             <span class="no-signup-req">No signup required!</span>
@@ -123,7 +123,7 @@
         <!-- Create a header summarising the use cases of the application -->
         <header>
           <h2 class="section-heading">How it works</h2>
-          <p class="how-it-works-summary">Prioritasker allows you to prioritise your workload by separating the highly important tasks from the rest. It also tells you what to do with the less important tasks. See how to use the application below.</p>
+          <p class="how-it-works-summary">Prioritasker tells you how to prioritise your workload distinguishing the highly important tasks from the less important ones. See how to use the application below.</p>
         </header>
 
         <!-- Outline the user flow of the application -->
@@ -148,7 +148,7 @@
           <!-- Outline third user story -->
           <li class="step">
             <!-- Explain the action user needs to take -->
-            <p class="how-it-works-directions">3. Review your tasks.</p>
+            <p class="how-it-works-directions">3. Review your task list.</p>
             <!-- Add a screenshot illustrating the action the user needs to take -->
             <img class="how-it-works-screenshot" src="assets/img/img-how-it-works-1.png" alt="screenshot of the review tasks page in Prioritasker">
           </li>
@@ -311,7 +311,7 @@
           <!-- Add cta text to be displayed above bulb image -->
         <p class="cta-description">Join Prioritasker today to strategically tackle your workload for greater efficiency</p>
         <!-- Add cta button -->
-        <a href="/pages/form.html" class="btn">Get Started Now!</a>
+        <a href="https://sul-devs.github.io/prioritasker/pages/form.html" class="btn">Get Started Now!</a>
     </section>
     
     <!-- Create faqs section -->
