--- a/pages/form.html
+++ b/pages/form.html
@@ -98,7 +98,9 @@
       <!-- <button type="button">Google</button>
       <button type="button">IG</button>
       <button type="button">TW</button> -->
-      <a href="/app/screens/add-a-task.html" class="btn continue-as-guest-btn"
+      <a
+        href="https://sul-devs.github.io/prioritasker/app/screens/add-a-task.html"
+        class="btn continue-as-guest-btn"
         >Continue as guest</a
       >
     </form>
