--- a/app/screens/add-a-task.html
+++ b/app/screens/add-a-task.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../styles/style.css" />
     <link rel="stylesheet" href="../styles/app.css" />
-    <script src="../../scripts/app.js" defer></script>
+    <script src="../scripts/app.js" defer></script>
     <title>Prioritasker | Add task</title>
   </head>
   <body>
@@ -48,7 +48,7 @@
       <!-- Ask the user questions about their task -->
       <article id="answer-task-questions">
         <div class="container">
-          <form id="submit-quiz-form">
+          <form id="submit-quiz-form" action="/app/screens/confirm-task.html">
             <!-- Create the structure first part of questionnaire -->
             <fieldset>
               <!-- Question 1 -->
