--- a/pages/form.html
+++ b/pages/form.html
@@ -8,14 +8,14 @@
     <title>Form</title>
   </head>
   <body>
-    <h1>Sign Up to Prioritasker!</h1>
+    <h1>Click 'Continue as a guest'</h1>
     <!-- Registration/Login Form -->
     <form id="signup-form" action="/users.html" method="post">
       <ul class="form-fields">
         <!-- Username field -->
         <li class="form-field username-field">
           <label for="username"
-            >Create username &nbsp;&nbsp;&nbsp;
+            >Name &nbsp;&nbsp;&nbsp;
             <span class="required-tag" aria-label="required"
               >*Required</span
             ></label
@@ -31,7 +31,7 @@
         <!-- Email field -->
         <li class="form-field email-field">
           <label for="email"
-            >Enter email &nbsp;&nbsp;&nbsp;<span
+            >Email &nbsp;&nbsp;&nbsp;<span
               class="optional-tag"
               aria-label="optional"
               >*Optional</span
@@ -48,7 +48,7 @@
         <!-- Password field -->
         <li class="form-field password-field">
           <label for="password"
-            >Create password &nbsp;&nbsp;&nbsp;<span
+            >Password &nbsp;&nbsp;&nbsp;<span
               class="required-tag"
               aria-label="required"
               >*Required</span
@@ -59,23 +59,6 @@
             type="text"
             placeholder="Create a password"
             name="user-password"
-          />
-        </li>
-
-        <!-- Re-enter password field -->
-        <li class="form-field re-enter-password">
-          <label for="re-enter-password"
-            >Re-enter password &nbsp;&nbsp;&nbsp;<span
-              class="required-tag"
-              aria-label="required"
-              >*Required</span
-            ></label
-          >
-          <input
-            id="password"
-            type="text"
-            placeholder="Re-enter password"
-            name="user-re-enter-password"
           />
         </li>
 
