--- a/app/screens/add-a-task.html
+++ b/app/screens/add-a-task.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../styles/style.css" />
     <link rel="stylesheet" href="../styles/app.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
     <script src="../scripts/app.js" defer></script>
     <title>Prioritasker | Add task</title>
   </head>
@@ -53,7 +53,7 @@
             action="/prioritasker/app/screens/confirm-task.html"
           >
             <!-- Create the structure first part of questionnaire -->
-            <fieldset>
+            <fieldset class="border">
               <!-- Question 1 -->
               <legend>Is this task Urgent or Not Urgent?</legend>
 
@@ -88,7 +88,7 @@
             <br />
 
             <!-- Create the structure of the second part of the questionairre -->
-            <fieldset>
+            <fieldset class="border">
               <!-- Question 2 -->
               <legend>Is this task Important or Not Important?</legend>
 
